# sapv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  yahoo-finance-req.json
include/config/: globalconf.h
include/constants/: files.h
include/http/: curl-http-client.h  http-client.h  request-headers.h
include/portfolio/: data.h  fidelity.h  manager.h  read.h
include/stock/: data.h  fetcher.h
include/utils/: html.h  string.h
include/workers/: update-stocks.h
modes/: README.md  example.json
src/: main.cc
src/config/: globalconf.cc
src/http/: curl-http-client.cc  request-headers.cc
src/portfolio/: data.cc  fidelity.cc  manager.cc  read.cc
src/stock/: data.cc  fetcher.cc
src/utils/: html.cc  string.cc
src/workers/: update_stocks.cc
